# emulsion

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: tiny_lut_cache.npy
scripts/: caption_all_luts.py  caption_utility_luts.py  construct_lut_search_cache.py  create_lut_embeddings.py  generate_grain_texture.py  generate_grain_texture_metal_tiled.py
src/core/: device.py  image.py  metadata.py  secrets.py
src/effects/: base.py  basic.py  black_and_white.py  bloom.py  crop.py  gaussian_blur.py  gaussian_grain.py  lut.py  noise_blur.py  padding.py  temperature_tint.py  text_to_shader.py  texture_overlay.py  tone_mapping.py  vignette.py
src/generation/: __init__.py  gemini_shader.py  shader_cache.py  shader_validator.py
src/grain/: gaussian_splatting.py  gaussian_splatting_metal_tiled.py
src/interface/: crop_tool.py  error.py  geometry.py  gl_context.py  quad_renderer.py  shader.py  texture.py  uniform.py  viewer.py
src/io/: image_loader.py  image_saver.py
src/pipeline/: cache.py  history.py  shader_processor.py  stack.py  state_cache.py  texture_cache.py  torch_processor.py
system_prompts/: action_classification.txt  agentic_param_refinement.txt  agentic_planning.txt  agentic_preview_selection.txt  agentic_review.txt  human_agent_feedback.txt  human_agent_planning.txt  human_agent_review.txt  human_agent_review_candidates.txt  lut_analysis_json.txt  lut_analysis_response_schema.json  lut_summarization.txt  lut_summarization_response_schema.json  t2s_shader_generation.txt  utility_lut_analysis.txt  utility_lut_response_schema.json
(+10 files in other folders)
